<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_PTA" Id="{f2451757-fafd-4b5d-aa63-ca15aaf0f3d8}">
    <Declaration><![CDATA[TYPE T_PTA :
STRUCT
	io:		T_PTA_IO;
	ctrl:	T_PTA_CTRL;
	id:		T_PTA_ID;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>