<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_PTB_Cfg" Id="{dd1e60ba-e7ac-4ad1-83d3-60eba5efedbb}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_PTB_Cfg :
STRUCT
	// Function Mode
	eMode							: E_PTB_MODE;
	// Vacuum pump present
	bolVacuumPresent				: BOOL;
	// [mm] Length of the belt
	udiBeltLength_mm				: UDINT;
	// Belt Parameter	
	rBeltParam						: T_Belt_Cfg_Base;
	// Enable Entry Belt Sensor Debounce
	bolEntrySensorDebounceEnable	: BOOL;
	// Enable Exit Belt Sensor Debounce
	bolExitSensorDebounceEnable		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>