<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <POU Name="init_Pta" Id="{c415c1f4-6166-496a-b919-b182ed1f6230}">
    <Declaration><![CDATA[FUNCTION init_Pta : BOOL
VAR_INPUT
	pPta			: POINTER TO T_PTA;
	/// instance array of all controller instances
	pCtrlInst		: POINTER TO fb_CtrlBase;
	/// common interface array of all controllers (main use for PLC)
	pCtrlCIf		: POINTER TO T_Ctrl_CIf;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[pPta^.ctrl.fbPta_Umc.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pPta^.id.Pta_Umc);
pPta^.ctrl.fbPta.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pPta^.id.Pta);
pPta^.ctrl.fbPta.Drive := ADR(pPta^.ctrl.fbPta_Umc); // g_a_pCtrlInst[pPta^.id.Pta_Umc];

// PTA is a special type of PTB
pPta^.ctrl.fbPta.CtrlSIf^.Cfg.bolVacuumPresent := FALSE;]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>